End of Section 4

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -9,8 +9,9 @@
     }
   },
   "profiles": {
-  
+
     "api": {
+      "hotReloadEnabled": false,
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
